--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,13 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	
+	implementation 'javax.servlet:jstl' 
+	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 }
+
+
 
 tasks.named('test') {
 	useJUnitPlatform()
